# PlanPal

./: PlanPal.code-workspace
src/jarvis/: pyproject.toml
src/jarvis/SKJarvisProject/: config.py  copilot_kernel.py  function_app c.py  function_app copy.py  function_app.py  interactive.ipynb  requirements.txt
src/jarvis/SKJarvisProject/skills/: calendar_skill.py
src/jarvis/SKJarvisProject/skills/AllInformationPresentSkill/Validation/: skprompt.txt
src/jarvis/SKJarvisProject/skills/CalendarSemanticSkill/ExtractStartAndEndTimeFromUserInput/: config.json  skprompt.txt
src/jarvis/SKJarvisProject/skills/CalendarSemanticSkill/ExtractSubjectFromUserInput/: config.json  skprompt.txt
src/jarvis/SKJarvisProject/skills/CalendarSemanticSkill/FormatMeetingForCalendarEvent/: config.json  skprompt.txt
src/jarvis/SKJarvisProject/skills/CalendarSemanticSkill/ProposeMeetingTimes/: skprompt.txt
src/jarvis/SKJarvisProject/skills/Chat/ChatBot/: config.json  skprompt.txt
src/jarvis/SKJarvisProject/skills/Classification/Intent/: config.json
src/jarvis/SKJarvisProject/skills/PlannerSkill/: basic_planner.py
src/jarvis/jarvis/: copilot_kernel.py  function_app.py  interactive.ipynb  requirements.txt
src/jarvis/jarvis/skills/: calendar_skill.py  msgraph_skill.py
src/jarvis/jarvis/skills/AllInformationPresentSkill/Validation/: config.json
src/jarvis/jarvis/skills/CalendarSemanticSkill/ProposeMeetingTimes/: config.json
src/jarvis/jarvis/skills/CalendarSkill/: calendar_skill.py
src/jarvis/jarvis/skills/PlannerSkill/: plan.py
src/jarvis/tests/: test_access_graph.py
(+52 files in other folders)
