[tool.poetry]
name = "jarvis"
version = "0.1.0"
description = ""
authors = ["Stef Ruinard <41334908+Sruinard@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
azure-functions = "^1.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
